--- a/style.css
+++ b/style.css
@@ -3,34 +3,37 @@
     padding: 0;
     font-family: 'poppins', 'sans-serif';
     box-sizing: border-box;
-}
-body{
+  }
+  html{
+    scroll-behavior: smooth;
+  }
+  body{
     background: var(--primary-color);
     color: var(--secondary-color);
-}
-
-.container{
+  }
+  
+  .container{
     padding: 10px 10%;
-}
-nav{
+  }
+  nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-nav ul li{
+  }
+  
+  nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
-}
-nav ul li a{
+  }
+  nav ul li a{
     color: var(--secondary-color);
     text-decoration: none;
     font-size: 18px;
     position: relative;
-}
-nav ul li a::after{
+  }
+  nav ul li a::after{
     content: '';
     width: 0%;
     height: 3px;
@@ -39,96 +42,99 @@ nav ul li a::after{
     left: 0;
     bottom: -6px;
     transition: 0.5s;
-}
-nav ul li a:hover::after{
+  }
+  nav ul li a:hover::after{
     width: 100%;
-}
-.header-text{
+  }
+  .header-text{
     margin-top: 17%;
     margin-left: 23%;
     font-size: 30px;
-}
-.header-text h1{
+  }
+  .header-text h1{
     font-size: 50px;
     margin-top: 15px;
     color: var(--secondary-color);
-}
-.header-text h1 span{
+  }
+  .header-text h1 span{
     color: green;
-}
-.logo{
+  }
+  .logo{
     position: absolute;
     left: 80px;
     top: 120px;
-}
-#icon{
+  }
+  #icon{
     width: 30px;
     cursor: pointer;
-}
-:root{
+  }
+  :root{
     --primary-color: #f5f5f5;
     --secondary-color: #292929;
-}
-.dark-theme{
+  }
+  .dark-theme{
     --primary-color: #292929;
     --secondary-color: #f5f5f5;
-}
-.facebook-icon{
+  }
+  a{
+    text-decoration: none;
+  }
+  .facebook-icon{
     color: var(--secondary-color);
     margin-top: 17%;
-    margin-left: 28%;
+    margin-left: 45%;
     font-size: 3rem;
-}
-.discord-icon{
-    color: var(--secondary-color);
-    margin-top: 17%;
-    margin-left: 0%;
-    font-size: 3rem;
-}
-.github-icon{
+  }
+  .discord-icon{
     color: var(--secondary-color);
     margin-top: 17%;
     margin-left: 0%;
     font-size: 3rem;
-}
-.gitlab-icon{
+  }
+  .github-icon{
     color: var(--secondary-color);
     margin-top: 17%;
     margin-left: 0%;
     font-size: 3rem;
-}
-
-
-/*-----------------About Me-------------*/
-#about{
+  }
+  .gitlab-icon{
+    color: var(--secondary-color);
+    margin-top: 17%;
+    margin-left: 0%;
+    font-size: 3rem;
+  }
+  
+  
+  /*-----------------About Me-------------*/
+  #about{
     padding-top: 300px;
     padding-bottom: 75px;
     color: var(--secondary-color);
-}
-.row{
+  }
+  .row{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-.about-col2{
+  }
+  .about-col2{
     flex-basis: 35%;
-}
-.about-col2{
+  }
+  .about-col2{
     width: 100%;
     border-radius: 15px;
     padding-left: 65px;
     transition: 1s;
-}
-.about-col2 :hover{
+  }
+  .about-col2 :hover{
     transform: scale(1.2);
     z-index: 1;
-}
-.about-col1{
+  }
+  .about-col1{
     font-size: 19px;
     flex-basis: 60%;
     color:var(--primary-color)
-}
-.about-col1{
+  }
+  .about-col1{
     height: 410px;
     width: 335px;
     padding: 20px 30px;
@@ -138,60 +144,61 @@ nav ul li a:hover::after{
     position: relative;
     overflow: hidden;
     border: 5px solid grey;
-}
-.Intro{
+  }
+  .Intro{
     color: var(--secondary-color);
     font-size: 20px;
-}
-.Headerr{
+  }
+  .Headerr{
     color: var(--secondary-color);
     padding-top: 0%;
     font-family: 'Courier New';
     font-size: 48px;
-}
-.des{
+  }
+  .des{
     color: green;
     
-}
-.discord-icon1{
+  }
+  .discord-icon1{
     color: var(--secondary-color);
     margin-top: 10%;
     margin-left: 80%;
     font-size: 3rem;
-}
-.facebook-icon1{
+  }
+  .facebook-icon1{
     color: var(--secondary-color);
     margin-top: 10%;
     margin-left: 0%;
     font-size: 3rem;
-}
-
-/*--------------Experience-------------*/
-#experience{
+  }
+  
+  /*--------------Experience-------------*/
+  #experience{
     padding-bottom: 70px;
     padding-left: 50px;
+    padding-right: 50px;
     color: var(--secondary-color);
-}
-.experience1{
+  }
+  .experience1{
     color: var(--secondary-color);
     padding-top: 0%;
     font-family: 'Courier New';
     font-size: 48px;
-}
-.para{
+  }
+  .para{
     color: green;
     font-size: 19px;
     padding-left: 130px;
-}
-.box{
+  }
+  .box{
     display: flex;
     padding-left: 5px;
     align-items: center;
     min-height: 400px;
     font-size: 19px;
-}
-
-.card{
+  }
+  
+  .card{
     height: 300px;
     width: 550px;
     padding: 20px 30px;
@@ -201,40 +208,40 @@ nav ul li a:hover::after{
     position: relative;
     overflow: hidden;
     border: 5px solid grey;
-}
-.card span{
+  }
+  .card span{
     color: green;
-}
-.card h2{
+  }
+  .card h2{
     font-family: 'Courier New';
-}
-
-/*-----------------fEATURED PROJECTS--------------*/
-#projects{
+  }
+  
+  /*-----------------fEATURED PROJECTS--------------*/
+  #projects{
     padding-bottom: 80px;
     padding-left: 50px;
     color: var(--secondary-color);
-}
-.fprojects{
+  }
+  .fprojects{
     color: var(--secondary-color);
     padding-top: 0%;
     font-family: 'Courier New';
     font-size: 48px;
-}
-.para{
+  }
+  .para{
     color: green;
     font-size: 19px;
     padding-left: 130px;
-}
-
-.box{
+  }
+  
+  .box{
     display: flex;
     padding-left: 85px;
     align-items: center;
     min-height: 400px;
     font-size: 19px;
-}
-.hack{
+  }
+  .hack{
     height: 450px;
     width: 900px;
     padding: 20px 30px;
@@ -244,54 +251,55 @@ nav ul li a:hover::after{
     position: relative;
     overflow: hidden;
     border: 5px solid grey;
-}
-.hack span{
+  }
+  .hack span{
     color: green;
-}
-.box{
+  }
+  .box{
     display: flex;
     justify-content: space-between;
-}
-.container1{
+  }
+  .container1{
     display: flex;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 10px;
     margin-left: 40px;
     margin-top: 0px;
     flex-wrap: wrap;
-}
-.pic{
+  }
+  .pic{
     border-radius: 20px;
     position: relative;
     overflow: hidden;
-}
-.pic img{
-  
+  }
+  .pic img{
+    max-width: 100%;
+    height: auto;
     width: 200px;
     border-radius: 20px;
     display: block;
     transition: 1s;
-}
-.pic :hover{
+  }
+  .pic :hover{
     transform: scale(1.2);
     z-index: 1;
-}
-.gitlab-icon1{
+  }
+  .gitlab-icon1{
     color: var(--secondary-color);
     margin-top: 10%;
     margin-left: 90%;
     font-size: 3rem;
-}
-/*-------Second Porj-----------*/
-.box1{
+  }
+  /*-------Second Porj-----------*/
+  .box1{
     padding-top: 40px;
     display: flex;
     padding-left: 85px;
     align-items: center;
     min-height: 400px;
     font-size: 19px;
-}
-.hack1{
+  }
+  .hack1{
     height: 400px;
     width: 900px;
     padding: 20px 30px;
@@ -301,71 +309,71 @@ nav ul li a:hover::after{
     position: relative;
     overflow: hidden;
     border: 5px solid grey;
-}
-.hack1 span{
+  }
+  .hack1 span{
     color: green;
-}
-.box{
+  }
+  .box{
     display: flex;
     justify-content: space-between;
-}
-.container1{
+  }
+  .container1{
     display: flex;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 10px;
     margin-left: 40px;
     margin-top: 0px;
     flex-wrap: wrap;
-}
-.pic{
+  }
+  .pic{
     border-radius: 20px;
     position: relative;
     overflow: hidden;
-}
-.pic img{
+  }
+  .pic img{
     width: 200px;
     border-radius: 20px;
     display: block;
     transition: 1s;
-}
-.pic :hover{
+  }
+  .pic :hover{
     transform: scale(1.2);
     z-index: 1;
-}
-.gitlab-icon1{
+  }
+  .gitlab-icon1{
     color: var(--secondary-color);
     margin-top: 10%;
     margin-left: 90%;
     font-size: 3rem;
-}
-.tags .tag {
+  }
+  .tags .tag {
     color: var(--secondary-color);
     background-color: lightgray;
     border-radius: 2rem;
     padding: 0.4rem 1rem;
     display: inline-block;
     font-family: Cascadia Code;
-
-}
-
-/*-----------Contact Me----------*/
-#contact{
+  
+  }
+  
+  /*-----------Contact Me----------*/
+  #contact{
     padding-bottom: 80px;
     padding-left: 50px;
     color: var(--secondary-color);
-}
-.logo1{
+  }
+  .logo1{
    padding-top: 100px;
    padding-left: 150px;
    height: 100%;
-}
-.containerss{
+  }
+  .containerss{
     padding-top: 50px;
     display: flex;
     min-height: 400px;
     font-size: 19px;
-}
-.cards{
+  }
+  .cards{
     height: 500px;
     width: 550px;
     padding: 20px 30px;
@@ -376,12 +384,12 @@ nav ul li a:hover::after{
     position: relative;
     overflow: hidden;
     border: 5px solid grey;
-}
-.work{
+  }
+  .work{
     font-family: 'Courier New', Courier, monospace;
     font-size: 50px;
-}
-.btn{
+  }
+  .btn{
     margin-top: 15px;
     color: white;
     background-color: green;
@@ -389,8 +397,8 @@ nav ul li a:hover::after{
     border-radius: 0.6rem;
     font-weight: 500;
     font-family: Cascadia Code;
-}
-form input, form textarea{
+  }
+  form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
@@ -400,17 +408,37 @@ form input, form textarea{
     color: var(--secondary-color);
     font-size: 18px;
     border-radius: 6px;
-}
-::placeholder{
+  }
+  ::placeholder{
     color: black;
     font-size: large;
-}
-.copyright{
+  }
+  .copyright{
     padding-right: 20px;
     padding-bottom: 20px;
     text-align: right;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
     font-weight: 1000;
-}
-/*--------------Flexible sizes--------------*/
+  }
+  /* For screens smaller than 768px */
+  @media (max-width: 768px) {
+    .container {
+        padding: 10px 5%;
+    }
+    /* Adjust other styles as needed */
+  }
+  
+  /* For screens smaller than 480px */
+  @media (max-width: 480px) {
+    .container {
+        padding: 10px 2%;
+    }
+    /* Adjust other styles as needed */
+  }
+  @media (max-width: 768px) {
+    .about-col1,
+    .about-col2 {
+        flex-basis: 100%;
+    }
+  }
